# practical-dl-at-scale-with-mlflow

./: .gitignore  README.md  main.py  model_summary.txt  pyproject.toml  pytorch_quickstart.ipynb
section-1-dl-challenges-and-mlflow-prime/chap1-dl-life-cycle-and-mlops-challenges/: notebook.ipynb
section-1-dl-challenges-and-mlflow-prime/chap2-getting-started-with-mlflow-for-dl/: first_dl_with_mlflow.py  notebook.ipynb
section-1-dl-challenges-and-mlflow-prime/chap2-getting-started-with-mlflow-for-dl/lightning_logs/version_0/: events.out.tfevents.1671990826.Ibrahim.19706.0  events.out.tfevents.1671992405.Ibrahim.19706.1
section-1-dl-challenges-and-mlflow-prime/chap2-getting-started-with-mlflow-for-dl/mlruns/0/: meta.yaml
section-1-dl-challenges-and-mlflow-prime/lightning_logs/version_0/: events.out.tfevents.1671979697.Ibrahim.15045.0  events.out.tfevents.1671981127.Ibrahim.15045.1
section-2-tracking-a-dl-pipeline-at-scale/chapter-3-tracking-models-parameters-and-metrics/: notebook.ipynb  requirements.txt  second_df_with_mlflow_and_metrics.py
section-2-tracking-a-dl-pipeline-at-scale/chapter-3-tracking-models-parameters-and-metrics/mlflow_docker_setup/: .env  docker-compose.yaml  docker-compose.yml  requirements.txt
section-2-tracking-a-dl-pipeline-at-scale/chapter-4-tracking-code-and-data-versioning/: .env.example  MLproject  conda.yaml  fine_tuning.py  main.py  notebook.ipynb  requirements.txt
section-2-tracking-a-dl-pipeline-at-scale/chapter-4-tracking-code-and-data-versioning/pipeline/: download_dataset.py  fine_tuning_model.py  register_model.py
(+26 files in other folders)
